fix: CRUD 수정
- 요청 dto에 대한 입력값 검증
- ResponseEntity로 응답
- 명시적 타입 -> 구체적 타입으로 변경
- 날짜형태(yyyy-MM-dd HH:mm:ss)로 통일
- department Service로직 분리
- 엔티티 필드에 컬럼 속성 명시
- 명확한 변수명으로 변경
- 채용공고 저장 후 jobpostingskill 저장